Colaboratory를 통해 생성됨

--- a/Model_Building.ipynb
+++ b/Model_Building.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 100,
       "metadata": {
         "id": "1B9YyAjxvw_N"
       },
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 101,
       "metadata": {
         "id": "MrGuWZxjunMP"
       },
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 102,
       "metadata": {
         "id": "5xaGNWvDu6XA"
       },
@@ -56,12 +56,12 @@
         "from sklearn.neighbors import KNeighborsRegressor\n",
         "\n",
         "from sklearn.metrics import mean_squared_error, r2_score\n",
-        "from sklearn.preprocessing import StandardScaler, MinMaxScaler"
+        "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 103,
       "metadata": {
         "id": "OKt-yz7Uu-kB"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 104,
       "metadata": {
         "id": "1gHqG91Eu-mw"
       },
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 105,
       "metadata": {
         "id": "gHBDY7VNu-pk"
       },
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 106,
       "metadata": {
         "id": "y7FbMR4fu-sV"
       },
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 107,
       "metadata": {
         "id": "1GtICqkWu-u5"
       },
@@ -126,21 +126,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 119,
       "metadata": {
-        "id": "kXYhHChEu-xj"
+        "id": "kXYhHChEu-xj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e587fd7b-b746-40f9-bcf6-6f7613e36b0b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/utils/extmath.py:985: RuntimeWarning: invalid value encountered in true_divide\n",
+            "  updated_mean = (last_sum + new_sum) / updated_sample_count\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/utils/extmath.py:990: RuntimeWarning: invalid value encountered in true_divide\n",
+            "  T = new_sum / new_sample_count\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/utils/extmath.py:1020: RuntimeWarning: invalid value encountered in true_divide\n",
+            "  new_unnormalized_variance -= correction ** 2 / new_sample_count\n"
+          ]
+        }
+      ],
       "source": [
         "# X features와 y feature 정리\n",
         "stats_position = ['2B', '3B', 'C', 'CF', 'DH', 'LF', 'RF', 'SS']\n",
-        "X_cols = stats + stats_cum + stats_lag1 + stats_lag2 + stats_position + ['나이']\n",
-        "y_cols = ['OPS_NEXT']"
+        "X_cols = stats + stats_cum + stats_lag1 + stats_lag2 + stats_position + ['나이'] \n",
+        "y_cols = ['OPS_NEXT']\n",
+        "\n",
+        "resultdf = pd.DataFrame(data=result,columns=X_cols)\n",
+        "scaler = StandardScaler()\n",
+        "scaler.fit(resultdf)\n",
+        "results = scaler.transform(resultdf)\n",
+        "irisDF_scaled = pd.DataFrame(results,columns=X_cols)\n",
+        "df1 = result\n",
+        "df1[X_cols] = irisDF_scaled\n",
+        "df1.to_csv(\"/content/n.csv\", index=False, encoding='utf-8')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "source": [
+        "df = df1.fillna(-1) # nan값 -1로 impute \n",
+        "\n",
+        "df = df[df['OPS_NEXT'] > 0] # 다음 해의 OPS가 존재하는 값들만 추출 (다음 해 OPS 가 없다면, predict 값과 target값을 비교 할 수 없기 때문)\n",
+        "df = pd.concat([df, pd.get_dummies(df['포지션'], drop_first=True)], axis=1) # 포지션 dummy variable로 변환"
+      ],
+      "metadata": {
+        "id": "2CdI6WP-SOKd"
+      },
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 117,
       "metadata": {
         "id": "VWgoOWOmu-0W"
       },
@@ -161,24 +201,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 118,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 400
         },
         "id": "5j2EJblSvabP",
-        "outputId": "9f6b882e-d409-4789-f6d6-79041a841d02"
+        "outputId": "2d7b6e45-169b-4513-d23e-51e3db79bcf3"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2017 : 완료\n",
-            "test error :  0.12312062315229258\n",
-            "RMSE :  0.017423798400908262\n",
-            "r2 :  0.21178477758469316\n",
-            "완료\n"
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-118-704f5b70dd85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'타수'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m     \u001b[0mmodel2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mmodel3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/xgboost/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, eval_set, eval_metric, early_stopping_rounds, verbose, xgb_model, sample_weight_eval_set, callbacks)\u001b[0m\n\u001b[1;32m    355\u001b[0m         \"\"\"\n\u001b[1;32m    356\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 357\u001b[0;31m             trainDmatrix = DMatrix(X, label=y, weight=sample_weight,\n\u001b[0m\u001b[1;32m    358\u001b[0m                                    missing=self.missing, nthread=self.n_jobs)\n\u001b[1;32m    359\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/xgboost/core.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, label, missing, weight, silent, feature_names, feature_types, nthread)\u001b[0m\n\u001b[1;32m    424\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    427\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_types\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_types\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/xgboost/core.py\u001b[0m in \u001b[0;36mfeature_names\u001b[0;34m(self, feature_names)\u001b[0m\n\u001b[1;32m    860\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    861\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 862\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'feature_names must be unique'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    863\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_col\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    864\u001b[0m                 \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'feature_names must have the same length as data'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: feature_names must be unique"
           ]
         }
       ],
@@ -207,7 +251,7 @@
         "    model3 = model_dict['gbm']\n",
         "\n",
         "    weight = train['타수']\n",
-        "    model.fit(X_train, y_train, sample_weight=weight)\n",
+        "    model.fit( X_train, y_train, sample_weight=weight)\n",
         "    model2.fit(X_train, y_train, sample_weight=weight)\n",
         "    model3.fit(X_train, y_train, sample_weight=weight)\n",
         "    y_predict = model.predict(X_test)\n",
@@ -228,31 +272,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZuW_ddZgvaew",
-        "outputId": "45f655cf-61a1-4078-c470-2a962c36b1de"
+        "outputId": "35f9f24f-2062-4b80-c2fd-017f3de73cbe"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.11680140975340579,\n",
-              " 0.10154677321355854,\n",
-              " 0.10824896682733096,\n",
-              " 0.11499647682359589,\n",
-              " 0.1581273936295415,\n",
-              " 0.12246027543628853,\n",
-              " 0.1430846284133057,\n",
-              " 0.11969906112131366]"
+              "[0.11687225036931809,\n",
+              " 0.10106545277517692,\n",
+              " 0.10818638509715861,\n",
+              " 0.11507587341298839,\n",
+              " 0.15778894442514668,\n",
+              " 0.12267325348998026,\n",
+              " 0.14325516794801854,\n",
+              " 0.12100931058177497]"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 53
         }
       ],
       "source": [
@@ -262,14 +306,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 685
         },
         "id": "Dipo3D29vaht",
-        "outputId": "019f67ed-eeb4-4aaa-f3ed-611b62335b58"
+        "outputId": "b9c1a6bc-fdfd-4b40-db1e-340e8f6708ba"
       },
       "outputs": [
         {
@@ -280,7 +324,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 38
         },
         {
           "output_type": "stream",
@@ -664,7 +708,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCKvloda9Q5z1veFh0xrp/",
+      "authorship_tag": "ABX9TyPTIsmH1VOhu6joXd6Y3jsd",
       "include_colab_link": true
     },
     "kernelspec": {
