--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPctVDSxPhd1JPP6s94zVqn",
+      "authorship_tag": "ABX9TyOUSzbhjnQQlYPw8xKzPgxY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,21 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gmb408/OSSP-KBO-prediction/blob/main/Feature_Engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gmb408/OSSP-KBO-prediction/blob/version-0.1/Feature_Engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KKXCt_jnukqj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "tXwo_RcAsdKv"
       },
@@ -55,26 +46,24 @@
     {
       "cell_type": "code",
       "source": [
-        "submission = pd.read_csv(\"/content/submission.csv\")\n",
-        "reg = pd.read_csv(\"/content/Regular_Season_Batter.csv\")\n",
-        "result = pd.read_csv(\"/content/statiz_origin2.csv\", index_col=0)"
+        "result = pd.read_csv(\"/content/statiz_pre.csv\", index_col=0)"
       ],
       "metadata": {
         "id": "ry1h0-qHsllG"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# 1루타 feature 생성\n",
+        "# 단타 feature 생성\n",
         "result['1타'] = result['안타'] - result['2타'] - result['3타'] - result['홈런']"
       ],
       "metadata": {
         "id": "9OdNwkMssln7"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -82,13 +71,14 @@
       "source": [
         "# 사용 features 명시\n",
         "infos = ['ID','이름','생일','팀','시즌','포지션','나이']\n",
-        "stats = ['G','타수','득점','안타','1타','2타','3타','홈런','루타','타점','도루','도실','볼넷','사구','고4','삼진'\\\n",
-        "        ,'병살','희타','희비','타율','출루','장타','OPS','wOBA','wRC+','WAR+']"
+        "stats = ['G','타수','득점','안타','1타','2타','3타','홈런','루타','타점','사사구','삼진','타율','출루','장타','OPS','wOBA','wRC+','WAR+']\n",
+        "result['사사구'] = result['볼넷'] + result['사구']\n",
+        "result = result[infos] + result[stats]\n"
       ],
       "metadata": {
         "id": "qlM89yQAslqn"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -109,7 +99,7 @@
       "metadata": {
         "id": "y0uoN1BLsltD"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -121,7 +111,7 @@
       "metadata": {
         "id": "LFLA8oD7slvv"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -133,7 +123,7 @@
       "metadata": {
         "id": "iORllxFps0mc"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -154,7 +144,7 @@
       "metadata": {
         "id": "dDkKUTU3slyH"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -169,7 +159,7 @@
       "metadata": {
         "id": "HCOVgL1Ms6MK"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -181,7 +171,7 @@
       "metadata": {
         "id": "VfR1avl9s6O-"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -193,7 +183,7 @@
       "metadata": {
         "id": "aJVisN7gs6Rs"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -205,7 +195,7 @@
       "metadata": {
         "id": "EmOZZkRts6UY"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -227,7 +217,7 @@
       "metadata": {
         "id": "CjkWXUpLs6W_"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -240,19 +230,19 @@
       "metadata": {
         "id": "zpFkaf7ks6Zs"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 변환 데이터 저장\n",
-        "result.to_csv(\"/content/statiz_v2.csv\")"
+        "result.to_csv(\"/content/statiz_Final.csv\")"
       ],
       "metadata": {
         "id": "xxIKYYIbs6cP"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     }
   ]
