--- a/Data_preprocessing.ipynb
+++ b/Data_preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOV1atymONn5umwJ5q48liw",
+      "authorship_tag": "ABX9TyMkJWU5GJA12fe4rUxMKg8v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "kPR0hi_0o7ZL"
       },
-      "execution_count": 115,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "7NYCZY3opUDf"
       },
-      "execution_count": 116,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "7vtlQbG94Qdn"
       },
-      "execution_count": 117,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "6kG6HcYa41yr"
       },
-      "execution_count": 118,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "nhj7fdL8pUGD"
       },
-      "execution_count": 119,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "kAJl48r1pUIb"
       },
-      "execution_count": 120,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "Z7uX0omUpULD"
       },
-      "execution_count": 121,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "UGU37x3vpUNT"
       },
-      "execution_count": 122,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "GfVf4Ns3pnFX"
       },
-      "execution_count": 123,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "Nosu2m8spnM4"
       },
-      "execution_count": 124,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -187,24 +187,25 @@
       "metadata": {
         "id": "6EfD6BrZpnPe"
       },
-      "execution_count": 125,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# 결측치 제거 투수 OR 일반 타자\n",
-        "result.dropna()"
+        "# 타석 100 미만의 선수 제거 적은 표본으로 이상치및 결측치 제거\n",
+        "result.drop(result.loc[result['타석']<50].index, inplace=True)\n",
+        "result"
       ],
       "metadata": {
+        "id": "kGOoVzgtCUUk",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 659
         },
-        "id": "ZbyFjcSTCR2W",
-        "outputId": "cd97f2ce-69b9-4dca-99f7-081a94ebddfa"
+        "outputId": "fbd34d4a-60e3-4582-aaf3-6bd0aafea42f"
       },
-      "execution_count": 126,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,11 +237,11 @@
               "1478   7.0  2.0  0.124  0.188  0.195  0.383  0.180   -4.2  -1.41  \n",
               "1479   2.0  3.0  0.192  0.224  0.241  0.465  0.217   24.6  -1.58  \n",
               "\n",
-              "[7285 rows x 33 columns]"
+              "[5059 rows x 33 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c742d1bb-d3d6-4641-ab5b-6f31ca20c981\">\n",
+              "  <div id=\"df-42f86213-f8c0-47dc-8196-2447cca9568c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -550,9 +551,9 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>7285 rows × 33 columns</p>\n",
+              "<p>5059 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c742d1bb-d3d6-4641-ab5b-6f31ca20c981')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-42f86213-f8c0-47dc-8196-2447cca9568c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -603,12 +604,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c742d1bb-d3d6-4641-ab5b-6f31ca20c981 button.colab-df-convert');\n",
+              "          document.querySelector('#df-42f86213-f8c0-47dc-8196-2447cca9568c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c742d1bb-d3d6-4641-ab5b-6f31ca20c981');\n",
+              "          const element = document.querySelector('#df-42f86213-f8c0-47dc-8196-2447cca9568c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -631,21 +632,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 126
+          "execution_count": 35
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 타석 100 미만의 선수 제거 적은 표본으로 이상치가 가능\n",
-        "result.drop(result.loc[result['타석']<100].index, inplace=True)"
-      ],
-      "metadata": {
-        "id": "kGOoVzgtCUUk"
-      },
-      "execution_count": 127,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -656,7 +645,7 @@
       "metadata": {
         "id": "cHTKeUbSD7Lm"
       },
-      "execution_count": 128,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -670,11 +659,11 @@
         "id": "DqHuk4lqpnR-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 659
         },
-        "outputId": "60f99333-3cc6-4890-80ac-9498c28e4f72"
+        "outputId": "a54aacae-17eb-4265-e08c-147b786f7236"
       },
-      "execution_count": 129,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,11 +676,11 @@
               "3        0  이종범  1970-08-15  해  1997  SS  28  125.0  577.0  484.0  ...   9.0   \n",
               "4        0  이종범  1970-08-15  해  1996  SS  27  113.0  525.0  449.0  ...   4.0   \n",
               "...    ...  ...         ... ..   ...  ..  ..    ...    ...    ...  ...   ...   \n",
-              "3863  2187  임종찬  2001-09-28  한  2021  RF  21   42.0  146.0  132.0  ...   2.0   \n",
-              "3864  1838  박찬호  1995-06-05  K  2020  SS  26  141.0  530.0  479.0  ...  14.0   \n",
-              "3865  1993  정보근  1999-08-31  롯  2020   C  22   85.0  152.0  133.0  ...   7.0   \n",
-              "3866  1801  나종덕  1998-03-16  롯  2019   C  22  104.0  209.0  185.0  ...   5.0   \n",
-              "3867   358  김헌곤  1988-11-09  삼  2022  CF  35   80.0  239.0  224.0  ...  10.0   \n",
+              "5054  2187  임종찬  2001-09-28  한  2021  RF  21   42.0  146.0  132.0  ...   2.0   \n",
+              "5055  1838  박찬호  1995-06-05  K  2020  SS  26  141.0  530.0  479.0  ...  14.0   \n",
+              "5056  1993  정보근  1999-08-31  롯  2020   C  22   85.0  152.0  133.0  ...   7.0   \n",
+              "5057  1801  나종덕  1998-03-16  롯  2019   C  22  104.0  209.0  185.0  ...   5.0   \n",
+              "5058   358  김헌곤  1988-11-09  삼  2022  CF  35   80.0  239.0  224.0  ...  10.0   \n",
               "\n",
               "        희타   희비     타율     출루     장타    OPS   wOBA   wRC+   WAR+  \n",
               "0      1.0  4.0  0.393  0.452  0.581  1.033  0.462  198.3  11.77  \n",
@@ -700,17 +689,17 @@
               "3      0.0  3.0  0.324  0.428  0.581  1.009  0.431  173.2   9.70  \n",
               "4      0.0  2.0  0.332  0.425  0.566  0.991  0.440  184.6   9.52  \n",
               "...    ...  ...    ...    ...    ...    ...    ...    ...    ...  \n",
-              "3863   1.0  0.0  0.152  0.228  0.212  0.440  0.217   18.7  -1.06  \n",
-              "3864  12.0  3.0  0.221  0.274  0.273  0.548  0.254   40.2  -1.14  \n",
-              "3865   6.0  1.0  0.150  0.219  0.165  0.385  0.187   -3.9  -1.19  \n",
-              "3866   7.0  2.0  0.124  0.188  0.195  0.383  0.180   -4.2  -1.41  \n",
-              "3867   2.0  3.0  0.192  0.224  0.241  0.465  0.217   24.6  -1.58  \n",
+              "5054   1.0  0.0  0.152  0.228  0.212  0.440  0.217   18.7  -1.06  \n",
+              "5055  12.0  3.0  0.221  0.274  0.273  0.548  0.254   40.2  -1.14  \n",
+              "5056   6.0  1.0  0.150  0.219  0.165  0.385  0.187   -3.9  -1.19  \n",
+              "5057   7.0  2.0  0.124  0.188  0.195  0.383  0.180   -4.2  -1.41  \n",
+              "5058   2.0  3.0  0.192  0.224  0.241  0.465  0.217   24.6  -1.58  \n",
               "\n",
-              "[3868 rows x 33 columns]"
+              "[5059 rows x 33 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-846c1aeb-b592-47fd-9539-37a74e64dc81\">\n",
+              "  <div id=\"df-bc099eeb-e824-472e-8080-d8614b0121aa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -899,7 +888,7 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3863</th>\n",
+              "      <th>5054</th>\n",
               "      <td>2187</td>\n",
               "      <td>임종찬</td>\n",
               "      <td>2001-09-28</td>\n",
@@ -923,7 +912,7 @@
               "      <td>-1.06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3864</th>\n",
+              "      <th>5055</th>\n",
               "      <td>1838</td>\n",
               "      <td>박찬호</td>\n",
               "      <td>1995-06-05</td>\n",
@@ -947,7 +936,7 @@
               "      <td>-1.14</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3865</th>\n",
+              "      <th>5056</th>\n",
               "      <td>1993</td>\n",
               "      <td>정보근</td>\n",
               "      <td>1999-08-31</td>\n",
@@ -971,7 +960,7 @@
               "      <td>-1.19</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3866</th>\n",
+              "      <th>5057</th>\n",
               "      <td>1801</td>\n",
               "      <td>나종덕</td>\n",
               "      <td>1998-03-16</td>\n",
@@ -995,7 +984,7 @@
               "      <td>-1.41</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3867</th>\n",
+              "      <th>5058</th>\n",
               "      <td>358</td>\n",
               "      <td>김헌곤</td>\n",
               "      <td>1988-11-09</td>\n",
@@ -1020,9 +1009,9 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>3868 rows × 33 columns</p>\n",
+              "<p>5059 rows × 33 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-846c1aeb-b592-47fd-9539-37a74e64dc81')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bc099eeb-e824-472e-8080-d8614b0121aa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1073,12 +1062,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-846c1aeb-b592-47fd-9539-37a74e64dc81 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bc099eeb-e824-472e-8080-d8614b0121aa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-846c1aeb-b592-47fd-9539-37a74e64dc81');\n",
+              "          const element = document.querySelector('#df-bc099eeb-e824-472e-8080-d8614b0121aa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1101,7 +1090,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 129
+          "execution_count": 37
         }
       ]
     }
