--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhQhG48lT0AmcaX7Fj1x0c",
+      "authorship_tag": "ABX9TyNDNAD3k4QHzY2AZ8bnoFmh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 35,
       "metadata": {
         "id": "tXwo_RcAsdKv"
       },
@@ -46,12 +46,12 @@
     {
       "cell_type": "code",
       "source": [
-        "result = pd.read_csv(\"/content/statiz_pre.csv\", index_col=0)\n"
+        "result = pd.read_csv(\"/content/statiz_pre.csv\", index_col=0)"
       ],
       "metadata": {
         "id": "ry1h0-qHsllG"
       },
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "9OdNwkMssln7"
       },
-      "execution_count": 6,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "qlM89yQAslqn"
       },
-      "execution_count": 7,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "y0uoN1BLsltD"
       },
-      "execution_count": 8,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "LFLA8oD7slvv"
       },
-      "execution_count": 9,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "iORllxFps0mc"
       },
-      "execution_count": 10,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "dDkKUTU3slyH"
       },
-      "execution_count": 11,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "HCOVgL1Ms6MK"
       },
-      "execution_count": 12,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "VfR1avl9s6O-"
       },
-      "execution_count": 13,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "aJVisN7gs6Rs"
       },
-      "execution_count": 14,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "EmOZZkRts6UY"
       },
-      "execution_count": 15,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "CjkWXUpLs6W_"
       },
-      "execution_count": 16,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
       "metadata": {
         "id": "zpFkaf7ks6Zs"
       },
-      "execution_count": 17,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -246,9 +246,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 870
         },
-        "outputId": "effd0c13-ed32-4fb0-f63a-03d1f8cb2753"
+        "outputId": "df4fb6fb-373a-4703-c5fd-91f345b43f50"
       },
-      "execution_count": 18,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,11 +261,11 @@
               "3        0  이종범  1970-08-15  해  1997  SS  28  125.0  484.0  112.0  ...   \n",
               "4        0  이종범  1970-08-15  해  1996  SS  27  113.0  449.0   94.0  ...   \n",
               "...    ...  ...         ... ..   ...  ..  ..    ...    ...    ...  ...   \n",
-              "3863  2187  임종찬  2001-09-28  한  2021  RF  21   42.0  132.0    9.0  ...   \n",
-              "3864  1838  박찬호  1995-06-05  K  2020  SS  26  141.0  479.0   63.0  ...   \n",
-              "3865  1993  정보근  1999-08-31  롯  2020   C  22   85.0  133.0    9.0  ...   \n",
-              "3866  1801  나종덕  1998-03-16  롯  2019   C  22  104.0  185.0   12.0  ...   \n",
-              "3867   358  김헌곤  1988-11-09  삼  2022  CF  35   80.0  224.0   18.0  ...   \n",
+              "5054  2187  임종찬  2001-09-28  한  2021  RF  21   42.0  132.0    9.0  ...   \n",
+              "5055  1838  박찬호  1995-06-05  K  2020  SS  26  141.0  479.0   63.0  ...   \n",
+              "5056  1993  정보근  1999-08-31  롯  2020   C  22   85.0  133.0    9.0  ...   \n",
+              "5057  1801  나종덕  1998-03-16  롯  2019   C  22  104.0  185.0   12.0  ...   \n",
+              "5058   358  김헌곤  1988-11-09  삼  2022  CF  35   80.0  224.0   18.0  ...   \n",
               "\n",
               "      타율_LAG3  출루_LAG3  장타_LAG3  OPS_LAG3  wOBA_LAG3  wRC+_LAG3  WAR+_LAG3  \\\n",
               "0         NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
@@ -274,11 +274,11 @@
               "3       0.393    0.452    0.581     1.033      0.462      198.3      11.77   \n",
               "4       0.280    0.331    0.432     0.762      0.350      127.4       6.14   \n",
               "...       ...      ...      ...       ...        ...        ...        ...   \n",
-              "3863      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
-              "3864      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
-              "3865      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
-              "3866      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
-              "3867    0.297    0.362    0.387     0.748      0.346      107.6       1.68   \n",
+              "5054      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5055      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5056      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5057      NaN      NaN      NaN       NaN        NaN        NaN        NaN   \n",
+              "5058    0.297    0.362    0.387     0.748      0.346      107.6       1.68   \n",
               "\n",
               "      장타_NEXT  출루_NEXT  OPS_NEXT  \n",
               "0       0.586    0.397     0.983  \n",
@@ -287,17 +287,17 @@
               "3         NaN      NaN       NaN  \n",
               "4       0.581    0.428     1.009  \n",
               "...       ...      ...       ...  \n",
-              "3863      NaN      NaN       NaN  \n",
-              "3864    0.313    0.331     0.644  \n",
-              "3865      NaN      NaN       NaN  \n",
-              "3866      NaN      NaN       NaN  \n",
-              "3867      NaN      NaN       NaN  \n",
+              "5054    0.321    0.228     0.549  \n",
+              "5055    0.313    0.331     0.644  \n",
+              "5056      NaN      NaN       NaN  \n",
+              "5057      NaN      NaN       NaN  \n",
+              "5058      NaN      NaN       NaN  \n",
               "\n",
-              "[3868 rows x 105 columns]"
+              "[5059 rows x 105 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6ba474d7-9d05-4dff-80e3-5ec75fc17581\">\n",
+              "  <div id=\"df-601ea811-56df-4eba-9413-e4d9f228f7cb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -486,7 +486,7 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3863</th>\n",
+              "      <th>5054</th>\n",
               "      <td>2187</td>\n",
               "      <td>임종찬</td>\n",
               "      <td>2001-09-28</td>\n",
@@ -505,12 +505,12 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>0.321</td>\n",
+              "      <td>0.228</td>\n",
+              "      <td>0.549</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3864</th>\n",
+              "      <th>5055</th>\n",
               "      <td>1838</td>\n",
               "      <td>박찬호</td>\n",
               "      <td>1995-06-05</td>\n",
@@ -534,7 +534,7 @@
               "      <td>0.644</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3865</th>\n",
+              "      <th>5056</th>\n",
               "      <td>1993</td>\n",
               "      <td>정보근</td>\n",
               "      <td>1999-08-31</td>\n",
@@ -558,7 +558,7 @@
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3866</th>\n",
+              "      <th>5057</th>\n",
               "      <td>1801</td>\n",
               "      <td>나종덕</td>\n",
               "      <td>1998-03-16</td>\n",
@@ -582,7 +582,7 @@
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3867</th>\n",
+              "      <th>5058</th>\n",
               "      <td>358</td>\n",
               "      <td>김헌곤</td>\n",
               "      <td>1988-11-09</td>\n",
@@ -607,9 +607,9 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>3868 rows × 105 columns</p>\n",
+              "<p>5059 rows × 105 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6ba474d7-9d05-4dff-80e3-5ec75fc17581')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-601ea811-56df-4eba-9413-e4d9f228f7cb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -660,12 +660,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6ba474d7-9d05-4dff-80e3-5ec75fc17581 button.colab-df-convert');\n",
+              "          document.querySelector('#df-601ea811-56df-4eba-9413-e4d9f228f7cb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6ba474d7-9d05-4dff-80e3-5ec75fc17581');\n",
+              "          const element = document.querySelector('#df-601ea811-56df-4eba-9413-e4d9f228f7cb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -688,7 +688,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 52
         }
       ]
     }
