--- a/Model_Building.ipynb
+++ b/Model_Building.ipynb
@@ -1066,40 +1066,44 @@
         "from sklearn.metrics import mean_absolute_error\n",
         "\n",
         "model = model_dict['xgb']\n",
-        "model2 = model_dict['lggb']\n",
-        "model3 = model_dict['reg']\n",
-        "model4 = model_dict['ridge']\n",
+        "model2 = model_dict['lgbm']\n",
+        "model3 = model_dict['gbm']\n",
+        "model4 = model_dict['xgb']\n",
         "test_error = []\n",
         "r2 = []\n",
-        "train, test = train_test_split(df, test_size=0.2, random_state=10)\n",
         "\n",
+        "train, test = train_test_split(df, test_size=0.2, random_state=10)\n",
+        "y_train = train[y_cols]\n",
+        "y_test = test[y_cols]\n",
         "# 개별 기반 모델에서 최종 메타 모델이 사용할 학습 및 테스트용 데이터를 생성하기 위한 함수. \n",
-        "def get_stacking_base_datasets(model, train_n, test_n, n_folds ):\n",
+        "def get_stacking_base_datasets(model, train,test, n_folds ):\n",
         "    # 지정된 n_folds값으로 KFold 생성.\n",
         "    kf = KFold(n_splits=n_folds, shuffle=False)\n",
         "\n",
         "    #추후에 메타 모델이 사용할 학습 데이터 반환을 위한 넘파이 배열 초기화 \n",
-        "    train_fold_pred = np.zeros((X_train_n.shape[0] ,1 ))\n",
-        "    test_pred = np.zeros((X_test_n.shape[0],n_folds))\n",
+        "    train_fold_pred = np.zeros((train.shape[0] ,1 ))\n",
+        "    test_pred = np.zeros((test.shape[0],n_folds))\n",
         "    print(model.__class__.__name__ , ' model 시작 ')\n",
+        "\n",
         "    \n",
-        "    for folder_counter , (train_index, valid_index) in enumerate(kf.split(X_train_n)):\n",
+        "\n",
+        "    for folder_counter , (train_index, valid_index) in enumerate(kf.split(train)):\n",
         "        #입력된 학습 데이터에서 기반 모델이 학습/예측할 폴드 데이터 셋 추출 \n",
         "        print('\\t 폴드 세트: ',folder_counter,' 시작 ')\n",
-        "        train, test = df.iloc[train_index], df.iloc[te]\n",
+        "        tra, val = df.iloc[train_index], df.iloc[valid_index]\n",
         "        X_train, X_test = train[X_cols],test[X_cols]\n",
-        "        y_train, y_test = train[y_cols],test[y_cols]\n",
+        "        y_train = train[y_cols]\n",
         "\n",
-        "        X_tr = X_train_n[train_index] \n",
-        "        y_tr = y_train_n[train_index] \n",
-        "        X_te = X_train_n[valid_index]  \n",
+        "        X_tr = train[X_cols] \n",
+        "        y_tr = train[y_cols] \n",
+        "        X_vl = val[X_cols]\n",
         "        \n",
         "        #폴드 세트 내부에서 다시 만들어진 학습 데이터로 기반 모델의 학습 수행.\n",
         "        model.fit(X_tr , y_tr)       \n",
         "        #폴드 세트 내부에서 다시 만들어진 검증 데이터로 기반 모델 예측 후 데이터 저장.\n",
-        "        train_fold_pred[valid_index, :] = model.predict(X_te).reshape(-1,1)\n",
+        "        train_fold_pred[valid_index, :] = model.predict(X_vl).reshape(-1,1)\n",
         "        #입력된 원본 테스트 데이터를 폴드 세트내 학습된 기반 모델에서 예측 후 데이터 저장. \n",
-        "        test_pred[:, folder_counter] = model.predict(X_test_n)\n",
+        "        test_pred[:, folder_counter] = model.predict(X_test)\n",
         "            \n",
         "    # 폴드 세트 내에서 원본 테스트 데이터를 예측한 데이터를 평균하여 테스트 데이터로 생성 \n",
         "    test_pred_mean = np.mean(test_pred, axis=1).reshape(-1,1)    \n",
@@ -1107,24 +1111,169 @@
         "    #train_fold_pred는 최종 메타 모델이 사용하는 학습 데이터, test_pred_mean은 테스트 데이터\n",
         "    return train_fold_pred , test_pred_mean\n",
         "# CV스태킹 알고리즘 각 모델에 적용\n",
-        "knn_train, knn_test = get_stacking_base_datasets(model, train, test, 7)\n",
-        "rf_train, rf_test = get_stacking_base_datasets(model, train, test, 7)\n",
-        "dt_train, dt_test = get_stacking_base_datasets(model, train, test,  7)    \n",
+        "\n",
+        "knn_train, knn_test = get_stacking_base_datasets(model,train,test, 7)\n",
+        "rf_train, rf_test = get_stacking_base_datasets(model2, train,test, 7)\n",
+        "dt_train, dt_test = get_stacking_base_datasets(model3,train,test,  7)    \n",
         "\n",
         "# CV스태킹 알고리즘 결과로 메타 모델 학습/시험에 필요한 result_a result_b 만들기 \n",
         "Stack_final_X_train = np.concatenate((knn_train, rf_train, dt_train), axis=1)\n",
         "Stack_final_X_test = np.concatenate((knn_test, rf_test, dt_test), axis=1)\n",
         "\n",
         "# 메타 모델 학습\n",
-        "model4.fit(Stack_final_X_train, )\n",
+        "model4.fit(Stack_final_X_train,y_train  )\n",
         "stack_final = model4.predict(Stack_final_X_test)\n",
-        "\n"
+        "\n",
+        "mse=mean_squared_error(y_test,  stack_final ,squared=False)\n",
+        "rmse =  np.sqrt(mse)\n",
+        "r2 =r2_score(y_test, stack_final)\n",
+        "print(\"test error : \", mse)\n",
+        "print(\"RMSE : \", rmse)\n",
+        "print(\"r2 : \", r2)\n",
+        "print(\"완료\")"
       ],
       "metadata": {
-        "id": "1PIdZePEyDeL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1PIdZePEyDeL",
+        "outputId": "31df781a-2345-4ab7-ffb2-4901fcf02c21"
       },
-      "execution_count": 20,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "XGBRegressor  model 시작 \n",
+            "\t 폴드 세트:  0  시작 \n",
+            "\t 폴드 세트:  1  시작 \n",
+            "\t 폴드 세트:  2  시작 \n",
+            "\t 폴드 세트:  3  시작 \n",
+            "\t 폴드 세트:  4  시작 \n",
+            "\t 폴드 세트:  5  시작 \n",
+            "\t 폴드 세트:  6  시작 \n",
+            "LGBMRegressor  model 시작 \n",
+            "\t 폴드 세트:  0  시작 \n",
+            "\t 폴드 세트:  1  시작 \n",
+            "\t 폴드 세트:  2  시작 \n",
+            "\t 폴드 세트:  3  시작 \n",
+            "\t 폴드 세트:  4  시작 \n",
+            "\t 폴드 세트:  5  시작 \n",
+            "\t 폴드 세트:  6  시작 \n",
+            "GradientBoostingRegressor  model 시작 \n",
+            "\t 폴드 세트:  0  시작 \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t 폴드 세트:  1  시작 \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t 폴드 세트:  2  시작 \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t 폴드 세트:  3  시작 \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t 폴드 세트:  4  시작 \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t 폴드 세트:  5  시작 \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t 폴드 세트:  6  시작 \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test error :  0.13946684280053365\n",
+            "RMSE :  0.3734525977959367\n",
+            "r2 :  0.013202480943559691\n",
+            "완료\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1153,7 +1302,7 @@
         "    y_predict = model.predict(X_test)\n",
         "    y_predict2 = model2.predict(X_test)\n",
         "    y_predict3 = model3.predict(X_test)\n",
-        "    fin =  (y_predict*0.6)  +  (y_predict2*0.2) +  (y_predict3*0.2)\n",
+        "    fin =  (y_predict  +  y_predict2 +  y_predict3)/3\n",
         "\n",
         "\n",
         "    test_error.append(mean_squared_error(y_test,  fin ,squared=False) )\n",
@@ -1171,9 +1320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hJZEuQaTvU2t",
-        "outputId": "abe4083c-4061-43d1-e4df-b9b05308f62a"
+        "outputId": "71de6203-d030-4b7f-e809-96d489c4420f"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -1196,8 +1345,39 @@
             "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n",
             "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/ensemble/_gb.py:494: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  y = column_or_1d(y, warn=True)\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test error :  0.10970003021454737\n",
+            "RMSE :  0.01290351147170938\n",
+            "r2 :  0.10948487087014516\n",
+            "완료\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.12839291013777618,\n",
+              " 0.11873610905691558,\n",
+              " 0.11612421730268788,\n",
+              " 0.09158797656400375,\n",
+              " 0.09605335824080574,\n",
+              " 0.11491305247980105,\n",
+              " 0.1034554677764126,\n",
+              " 0.08905454947049887,\n",
+              " 0.11952558340369455,\n",
+              " 0.11915707771287748]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
         }
       ]
     },
@@ -1677,7 +1857,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2X3xb7XdoP2pT0Hp9M/+C",
+      "authorship_tag": "ABX9TyOiTa1zlp2Jj048ZR4dien6",
       "include_colab_link": true
     },
     "kernelspec": {
